eddited margines and centered

--- a/index.html
+++ b/index.html
@@ -3,20 +3,20 @@
 	<head>
 		<meta charset="utf-8">
 		<title>MacDrones Home Page</title>
-		<link rel="styles" href="./styles/styles.css">
+		<link rel="stylesheet" href="./styles/styles.css">
 	</head>
 	<body>
-		<h1>MacDrones</h1>
-		<h2>The Best View Yet</h2>
-		<p>MacDrones is your eyes in the sky capturing the views that used to be just out of reach.
+		<h1 class="center">MacDrones</h1>
+		<h2 class="center">The Best View Yet</h2>
+		<p class="center" >MacDrones is your eyes in the sky capturing the views that used to be just out of reach. <strong>MacDrones</strong> is your eyes in the sky capturing the views that used to be just out of reach.
 			Not only can you see what you have never seen before but MacDrones biggest benefit is <strong>Saving Money</strong>
 			through time efficiency, safety, quality controle, and accuracy.
 			Think of all you have been missing!</p>
 		<div>
-			<h2>The Possabilities are Endless</h2>
-			<p>We are here to provide our customers with rapid accurate service. We help our customers take back those
+			<h2 class="center">The Possabilities are Endless</h2>
+			<p class="center">We are here to provide our customers with rapid accurate service. We help our customers take back those
 				valuable manhours and put them to better use. </p>
-			<ul>
+			<ul class="center">
 				<li>Beautiful landscapes</li>
 				<li>Full Realestate Video</li>
 				<li>action video</li>
