added strong to company name

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<h1 class="center">MacDrones</h1>
 		<h2 class="center">The Best View Yet</h2>
 		<p class="center" >MacDrones is your eyes in the sky capturing the views that used to be just out of reach. <strong>MacDrones</strong> is your eyes in the sky capturing the views that used to be just out of reach.
-			Not only can you see what you have never seen before but MacDrones biggest benefit is <strong>Saving Money</strong>
+			Not only can you see what you have never seen before but <strong>MacDrones</strong> biggest benefit is <strong>Saving Money</strong>
 			through time efficiency, safety, quality controle, and accuracy.
 			Think of all you have been missing!</p>
 		<div>
