--- a/index.html
+++ b/index.html
@@ -7,14 +7,17 @@
 	</head>
 	<body>
 		<h1 class="center">MacDrones</h1>
-		<div><h2 class="center">The Best View Yet</h2>
+
+		<div class="center">
+			<h2>The Best View Yet</h2>
 		<p class="center" >MacDrones is your eyes in the sky capturing the views that used to be just out of reach. <strong>MacDrones</strong> is your eyes in the sky capturing the views that used to be just out of reach.
 			Not only can you see what you have never seen before but <strong>MacDrones</strong> biggest benefit is <strong>Saving Money</strong>
 			through time efficiency, safety, quality controle, and accuracy.
 			Think of all you have been missing!</p>
 		</div>
-		<div>
-			<h2 class="center">The Possabilities are Endless</h2>
+
+		<div class="center">
+			<h2>The Possabilities are Endless</h2>
 			<p class="center">We are here to provide our customers with rapid accurate service. We help our customers take back those
 				valuable manhours and put them to better use. </p>
 			<ul class="center">
